<resources>
    <string name="app_name">Union Find App</string>
    <string name="todo">TODO</string>
    <string name="see_connections">See Connections</string>
    <string name="check_connection">check connection</string>
    <string name="add_connection">Add Connection</string>
    <string name="first_node">First Node</string>
    <string name="second_node">Second Node</string>
    <string name="_0_0_are_now_connected">(0,0) are now connected</string>
    <string name="add_more">Add more</string>
</resources>